err/telesocketclient.err
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/NucleusUtils'...
Listing './lib/python3.5/site-packages/NucleusUtils/chest'...
Compiling './lib/python3.5/site-packages/NucleusUtils/chest/container.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/chest/container.py", line 126
    return f"Container: {chest}{self.name}({len(self)}){lock_status}"
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/config'...
Compiling './lib/python3.5/site-packages/NucleusUtils/config/__init__.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/config/__init__.py", line 25
    self._engine: BaseLoader = engine
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/config/engines'...
Listing './lib/python3.5/site-packages/NucleusUtils/events'...
Compiling './lib/python3.5/site-packages/NucleusUtils/events/__init__.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/events/__init__.py", line 65
    raise RuntimeError(f"'{handler.__module__}.{handler.__name__}' is already subscribed for '{self}'")
                                                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NucleusUtils/events/lock.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/events/lock.py", line 16
    self.on_change = Event(name=f'Lock:{self.id}:change')
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/files'...
Compiling './lib/python3.5/site-packages/NucleusUtils/files/watcher.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/files/watcher.py", line 43
    _log.warning(f"{check_type()} '{file.name}' was {check_mode()}")
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/jProtocol'...
Compiling './lib/python3.5/site-packages/NucleusUtils/jProtocol/router.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/jProtocol/router.py", line 22
    server_exc=RuntimeError(f"Method '{method}' must return Response object"))
                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/logging'...
Compiling './lib/python3.5/site-packages/NucleusUtils/logging/dumps.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/logging/dumps.py", line 19
    log.debug(f"Make dir '{dumps_path}'")
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/py'...
Listing './lib/python3.5/site-packages/NucleusUtils/queues'...
Listing './lib/python3.5/site-packages/NucleusUtils/signals'...
Compiling './lib/python3.5/site-packages/NucleusUtils/signals/__init__.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/signals/__init__.py", line 74
    return f"[Handler at {hex(id(self))} '{self.context or '*'}' -> {signals}]"
                                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/simple'...
Listing './lib/python3.5/site-packages/NucleusUtils/singleton'...
Listing './lib/python3.5/site-packages/NucleusUtils/stack'...
Compiling './lib/python3.5/site-packages/NucleusUtils/stack/link.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/stack/link.py", line 11
    log.debug(f"Set '{name}' at {stack}:{pos}")
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/NucleusUtils/stack/memory.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/stack/memory.py", line 15
    log.debug(f"Add new stack {hex(id(stack))}")
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/threads'...
Listing './lib/python3.5/site-packages/NucleusUtils/translations'...
Compiling './lib/python3.5/site-packages/NucleusUtils/translations/advanced.py'...
***   File "./lib/python3.5/site-packages/NucleusUtils/translations/advanced.py", line 53
    text = f"Error: {e}\nLocale: {locale}, Module: {module}\nTemplate: {template}"
                                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/NucleusUtils/trash'...
Listing './lib/python3.5/site-packages/NucleusUtils/versions'...
Listing './lib/python3.5/site-packages/NucleusUtils/web'...
Listing './lib/python3.5/site-packages/NucleusUtils-0.1.11b1.dist-info'...
Listing './lib/python3.5/site-packages/TeleSocketClient'...
Compiling './lib/python3.5/site-packages/TeleSocketClient/__init__.py'...
***   File "./lib/python3.5/site-packages/TeleSocketClient/__init__.py", line 55
    log.debug(f"Receive: '{message}'")
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/TeleSocketClient/bin'...
Listing './lib/python3.5/site-packages/TeleSocketClient-0.1.3b1.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
